--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ffp
 spring.datasource.username=root
-spring.datasource.password=Vineeth.7736@
+spring.datasource.password=sandeep
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+server.port=8080
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.generate-ddl = true
+spring.jpa.show-sql = true
