frontEnd code updates-5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ffp
 spring.datasource.username=root
-spring.datasource.password=Vineeth.7736@
+spring.datasource.password=sandeep
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
